--- a/index.html
+++ b/index.html
@@ -36,13 +36,19 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100" alt="...">
+				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" 
+					srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-tablette.jpg 1000w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-mobile.jpg 500w"
+					class="d-block w-100" alt="...">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100" alt="...">
+				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" 
+					srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-tablette.jpg 1000w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-mobile.jpg 500w"
+					class="d-block w-100" alt="...">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100" alt="...">
+				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" 
+					srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-tablette.jpg 1000w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-mobile.jpg 500w"
+					class="d-block w-100" alt="...">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -57,7 +63,8 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.png">
+		<img src="./assets/images/nina.png"
+			srcset="./assets/images/nina-mobile.png">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -150,7 +157,8 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.png">
+			<img src="./assets/images/camera.png"
+				srcset="./assets/images/camera-mobile.png">
 		</div>
 	</div>
 </div>
