--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
 		<div class="carousel-inner">
 			<div class="carousel-item active">
 				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" 
-					srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-tablette.jpg 1000w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-mobile.jpg 500w"
+					srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg 1920w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-tablette.jpg 1000w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-mobile.jpg 500w"
 					class="d-block w-100" alt="...">
 			</div>
 			<div class="carousel-item">
 				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" 
-					srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-tablette.jpg 1000w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-mobile.jpg 500w"
+					srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg 1920w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-tablette.jpg 1000w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-mobile.jpg 500w"
 					class="d-block w-100" alt="...">
 			</div>
 			<div class="carousel-item">
 				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" 
-					srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-tablette.jpg 1000w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-mobile.jpg 500w"
+					srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg 1920w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-tablette.jpg 1000w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-mobile.jpg 500w"
 					class="d-block w-100" alt="...">
 			</div>
 		</div>
@@ -64,7 +64,7 @@
 <div id="about">
 	<div class="picture left">
 		<img src="./assets/images/nina.png"
-			srcset="./assets/images/nina-mobile.png">
+			srcset="./assets/images/nina-mobile.png 280w, ./assets/images/nina.png 560w">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -158,7 +158,7 @@
 		</div>
 		<div class="picture right">
 			<img src="./assets/images/camera.png"
-				srcset="./assets/images/camera-mobile.png">
+				srcset="./assets/images/camera-mobile.png 260w, ./assets/images/camera.png 430w">
 		</div>
 	</div>
 </div>
