Conversion des png en jpg

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.png"
-			srcset="./assets/images/nina-mobile.png 280w, ./assets/images/nina.png 560w">
+		<img src="./assets/images/nina.jpg"
+			srcset="./assets/images/nina-mobile.jpg 280w, ./assets/images/nina.jpg 560w">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -157,8 +157,8 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.png"
-				srcset="./assets/images/camera-mobile.png 260w, ./assets/images/camera.png 430w">
+			<img src="./assets/images/camera.jpg"
+				srcset="./assets/images/camera-mobile.jpg 260w, ./assets/images/camera.jpg 430w">
 		</div>
 	</div>
 </div>
