--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Spectral:ital,wght@0,800;1,300;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" defer integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
@@ -38,17 +38,17 @@
 			<div class="carousel-item active">
 				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" 
 					srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg 1920w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-tablette.jpg 1000w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-mobile.jpg 500w"
-					class="d-block w-100" alt="...">
+					class="d-block w-100" alt="..." loading="lazy">
 			</div>
 			<div class="carousel-item">
 				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" 
 					srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg 1920w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-tablette.jpg 1000w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-mobile.jpg 500w"
-					class="d-block w-100" alt="...">
+					class="d-block w-100" alt="..." loading="lazy">
 			</div>
 			<div class="carousel-item">
 				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" 
 					srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg 1920w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-tablette.jpg 1000w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-mobile.jpg 500w"
-					class="d-block w-100" alt="...">
+					class="d-block w-100" alt="..." loading="lazy">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -63,8 +63,9 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.jpg"
-			srcset="./assets/images/nina-mobile.jpg 280w, ./assets/images/nina.jpg 560w">
+		<img src="./assets/images/nina.jpg "
+			srcset="./assets/images/nina-mobile.jpg 280w, ./assets/images/nina.jpg 560w"
+			loading="lazy">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -158,7 +159,8 @@
 		</div>
 		<div class="picture right">
 			<img src="./assets/images/camera.jpg"
-				srcset="./assets/images/camera-mobile.jpg 260w, ./assets/images/camera.jpg 430w">
+				srcset="./assets/images/camera-mobile.jpg 260w, ./assets/images/camera.jpg 430w"
+				loading="lazy">
 		</div>
 	</div>
 </div>
