--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" 
-					srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg 1920w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-tablette.jpg 1000w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-mobile.jpg 500w"
+				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" 
+					srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp 1920w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-mobile.webp 500w"
 					class="d-block w-100" alt="...">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" 
-					srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg 1920w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-tablette.jpg 1000w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-mobile.jpg 500w"
+				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" 
+					srcset="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp 1920w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-tablette.webp 1000w, ./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash-mobile.webp 500w"
 					class="d-block w-100" alt="...">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" 
-					srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg 1920w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-tablette.jpg 1000w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-mobile.jpg 500w"
+				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" 
+					srcset="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp 1920w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-tablette.webp 1000w, ./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash-mobile.webp 500w"
 					class="d-block w-100" alt="...">
 			</div>
 		</div>
@@ -63,8 +63,9 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.jpg"
-			srcset="./assets/images/nina-mobile.jpg 280w, ./assets/images/nina.jpg 560w">
+		<img src="./assets/images/nina.webp "
+			srcset="./assets/images/nina-mobile.webp 280w, ./assets/images/nina.webp 560w"
+			loading="lazy">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -77,15 +78,15 @@
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"/>
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"/>
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"/>
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"/>
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"/>
 		</div>
 	</div>
 	<div class="quote">
@@ -157,8 +158,9 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.jpg"
-				srcset="./assets/images/camera-mobile.jpg 260w, ./assets/images/camera.jpg 430w">
+			<img src="./assets/images/camera.webp"
+				srcset="./assets/images/camera-mobile.webp 260w, ./assets/images/camera.webp 430w"
+				loading="lazy">
 		</div>
 	</div>
 </div>
