--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 	<meta charset="UTF-8">
 	<meta name="description" content ="Bienvenue sur mon portfolio, je suis la photographe Nina Carducci. Je vous invite à parcourir mon travail et à me contacter pour toute demande de prestation.">
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" defer integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
-	<script src="./assets/maugallery.js" defer></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous" defer></script>
+	<script src="./assets/maugallery.min.js" defer></script>
 	<script src="./assets/scripts.js" defer></script>
 </head>
 <body>
@@ -58,12 +58,12 @@
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
 				data-bs-slide="prev">
-				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="carousel-control-prev-icon" aria-hidden="true" aria-label="contrôleur du carousel image précédente"></span>
 				<span class="visually-hidden">Previous</span>
 			</button>
 			<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
 				data-bs-slide="next">
-				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="carousel-control-next-icon" aria-hidden="true" aria-label="contrôleur du carousel image suivante"></span>
 				<span class="visually-hidden">Next</span>
 			</button>
 		</div>
@@ -85,15 +85,15 @@
 	<h2 class="title">Portfolio</h2>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="public d'un concert, mains levées avec luminosité rouge">
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Portrait d'un homme confiant en costume et cravatte">
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="une réunion de travail cordiale">
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Gros plan sur les mains des mariés">
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Portrait d'un homme les yeux clos">
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="un couple de mariés qui rient">
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait d'une jeune femme devant un grillage">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="chanteur sur scène avec fumigènes en arrière plan">
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Portrait d'une jeune femme joyeuse devant son ordinateur">
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="public d'un concert, mains levées avec luminosité rouge" tabindex="0">
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Portrait d'un homme confiant en costume et cravatte" tabindex="0">
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="une réunion de travail cordiale" tabindex="0">
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Gros plan sur les mains des mariés" tabindex="0">
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Portrait d'un homme les yeux clos" tabindex="0">
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="un couple de mariés qui rient" tabindex="0">
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait d'une jeune femme devant un grillage" tabindex="0">
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="chanteur sur scène avec fumigènes en arrière plan" tabindex="0">
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Portrait d'une jeune femme joyeuse devant son ordinateur" tabindex="0">
 		</div>
 	</div>
 	<blockquote>
@@ -109,7 +109,7 @@
 		<article class="service">
 			<div>
 				<h3>Shooting photo</h3>
-				<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
+				<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. <strong>Je me déplace en Île-de-France pour réaliser vos photos</strong></p>
 			</div>
 			<div>
 				<h4>350€/demi journée</h4>
@@ -120,7 +120,7 @@
 		<article class="service">
 			<div>
 				<h3>Retouches</h3>
-				<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
+				<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un <strong> optimal pour vos publications</strong></p>
 			</div>
 			<div>
 				<h4>50€/photo</h4>
@@ -130,7 +130,7 @@
 		<article class="service">
 			<div>
 				<h3>Album photos</h3>
-				<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
+				<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un </strong>album photo personnalisé</strong></p>
 			</div>
 			<div>
 				<h4>400€ album A4</h4>
@@ -140,7 +140,7 @@
 	</div>
 </section>
 <blockquote>
-			<p>De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
+			<p>De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie.</p>
 		<cite>- Richard Avedon</cite>
 </blockquote>
 <section id="contact">
@@ -148,7 +148,7 @@
 		<form action="" method="post">
 			<fieldset>
 				<legend>
-					<h3>Une question ? Une demande de devis ?</h3>
+					<h3>Une question ? Une demande de </strong>devis ?</strong></h3>
 					<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 				</legend>
 				<label for="nom">Nom</label>
@@ -167,5 +167,8 @@
 	</div>
 </section>
 </main>
+<footer>
+	<p>Tous droits réservés 2023 Nina Carducci</p>
+</footer>
 </body>
 </html>
