--- a/index.html
+++ b/index.html
@@ -1,17 +1,63 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-	<title>Nina Carducci - Photographe</title>
+	<title>Nina Carducci - Photographe à Bordeaux</title>
+	<script type="application/ld+json">
+	{
+	  "@context": "http://schema.org",
+	  "@type": "LocalBusiness",
+	  "name": "Nina Carducci, photographe",
+	  "same as": "https://www.instagram.com/ninacarducci.photo/?hl=fr",
+	  "image": "https://nina-carducci.github.io/assets/images/nina.png",
+	  "url":"https://nina-carducci.github.io/",
+	  "priceRange": "50€ - 400€",
+	  "telephone": "0556677889",
+	  "address": {
+		"@type": "PostalAddress",
+		"streetAddress": "68 avenue Alsace-Lorraine",
+		"addressLocality": "Bordeaux",
+		"addressCountry": "FR",
+		"postalCode": "33200"
+	  },
+	  "openingHoursSpecification": {
+		"@type": "OpeningHoursSpecification",
+		"dayOfWeek": {
+		  "@type": "DayOfWeek",
+		  "name": "Lundi, mardi, mercredi, jeudi, vendredi"
+		},
+		"opens": "10:00",
+		"closes": "19:00"
+	  }
+	}
+	</script>
+
+	<!-- Open Graph data -->
+	<meta property="og:title" content="Nina Carducci, photographe"/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:url" content="https://nina-carducci.github.io/"/>
+	<meta property="og:image" content="https://nina-carducci.github.io/assets/images/nina.png"/>
+	<meta property="og:description" content="Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé."/>
+	<!-- Twitter Card data -->
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:title" content="Nina Carducci, photographe">
+	<meta name="twitter:description" content="Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé.">
+	<meta name="twitter:image" content="https://nina-carducci.github.io/assets/images/nina.png">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
-	<meta name="description" content ="Bienvenue sur mon portfolio, je suis la photographe Nina Carducci. Je vous invite à parcourir mon travail et à me contacter pour toute demande de prestation.">
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js" defer integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous" defer></script>
+	<meta name="description"
+		content="Bienvenue sur mon portfolio, je suis la photographe Nina Carducci. Je vous invite à parcourir mon travail et à me contacter pour toute prestation.">
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
+		integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
+		crossorigin="anonymous" referrerpolicy="no-referrer" defer></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+		integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"
+		defer></script>
 	<script src="./assets/maugallery.min.js" defer></script>
 	<script src="./assets/scripts.js" defer></script>
 </head>
@@ -71,8 +117,7 @@
 <article id="about">
 	<div class="picture left">
 		<img src="./assets/images/nina.webp " alt="Portrait de Nina Carducci"
-			srcset="./assets/images/nina-mobile.webp 280w, ./assets/images/nina.webp 560w"
-			loading="lazy">
+			srcset="./assets/images/nina-mobile.webp 280w, ./assets/images/nina.webp 560w">
 	</div>
 	<div id="about-me">
 		<h2 class="about-me__title">À propos de moi</h2>
@@ -85,15 +130,15 @@
 	<h2 class="title">Portfolio</h2>
 	<div class="container py-3">
 		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="public d'un concert, mains levées avec luminosité rouge" tabindex="0">
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Portrait d'un homme confiant en costume et cravatte" tabindex="0">
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="une réunion de travail cordiale" tabindex="0">
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Gros plan sur les mains des mariés" tabindex="0">
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Portrait d'un homme les yeux clos" tabindex="0">
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="un couple de mariés qui rient" tabindex="0">
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait d'une jeune femme devant un grillage" tabindex="0">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="chanteur sur scène avec fumigènes en arrière plan" tabindex="0">
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Portrait d'une jeune femme joyeuse devant son ordinateur" tabindex="0">
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp" alt="public d'un concert, mains levées avec luminosité rouge" tabindex="0" loading="lazy">
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp" alt="Portrait d'un homme confiant en costume et cravatte" tabindex="0" loading="lazy">
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp" alt="une réunion de travail cordiale" tabindex="0" loading="lazy">
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp" alt="Gros plan sur les mains des mariés" tabindex="0" loading="lazy">
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp" alt="Portrait d'un homme les yeux clos" tabindex="0" loading="lazy">
+			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp" alt="un couple de mariés qui rient" tabindex="0" loading="lazy">
+			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp" alt="Portrait d'une jeune femme devant un grillage" tabindex="0" loading="lazy">
+			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp" alt="chanteur sur scène avec fumigènes en arrière plan" tabindex="0" loading="lazy">
+			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp" alt="Portrait d'une jeune femme joyeuse devant son ordinateur" tabindex="0" loading="lazy">
 		</div>
 	</div>
 	<blockquote>
@@ -148,7 +193,7 @@
 		<form action="" method="post">
 			<fieldset>
 				<legend>
-					<h3>Une question ? Une demande de </strong>devis ?</strong></h3>
+					<h3>Une question ? Une demande de </strong>devis </strong>?</h3>
 					<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 				</legend>
 				<label for="nom">Nom</label>
