faute de frappe

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 		<article class="service">
 			<div>
 				<h3>Retouches</h3>
-				<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un <strong> optimal pour vos publications</strong></p>
+				<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un <strong> rendu optimal pour vos publications</strong></p>
 			</div>
 			<div>
 				<h4>50€/photo</h4>
